Add related tables to sidebar of editing card: debug

--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit.vm
@@ -18,6 +18,7 @@
               #if(!$tableDataRow)
                 #set($tableDataRow = $view.getTableDataRow())
               #end
+              Table data row $tableDataRow
               #set($relatedRowId = $tableDataRow.get($field))
               #set($snippet = "")
               #set($active = false)
@@ -29,7 +30,7 @@
                 #end
               #end
               <div class="dependent_table related #if($active) active #end" id="dependent_table_$relatedTable.getInternalTableName()">
-                <h1><span class="count"></span>edit $field $relatedRowId</h1>
+                <h1><span class="count"></span>edit $field.getSimplifiedFieldName() $relatedRowId</h1>
                 <div class="record_snippets">
                   <div class="snippet">$snippet</div>
                 </div>
