--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit.vm
@@ -18,19 +18,19 @@
               #if(!$tableDataRow)
                 #set($tableDataRow = $view.getTableDataRow())
               #end
-              Table data row $tableDataRow
               #set($relatedRowId = $tableDataRow.get($field.getRelatedField()).getValueInteger())
               #set($snippet = "")
               #set($active = false)
               #if($relatedRowId)
                 #set($active = true)
+                #set($fieldDisplayValue = $field.getDisplayValue($relatedRowId))##
                 #set($relatedDataRow = $view.getTableDataRow($relatedTable, $relatedRowId))
                 #foreach($relatedField in $relatedDataRow.keySet())
                   #set($snippet = "$snippet$relatedDataRow.get($relatedField), ")
                 #end
               #end
               <div class="dependent_table related #if($active) active #end" id="dependent_table_$relatedTable.getInternalTableName()">
-                <h1><span class="count"></span>edit $field.getSimplifiedFieldName() $relatedRowId</h1>
+                <h1><span class="count"></span>$field.getSimplifiedFieldName(): $fieldDisplayValue</h1>
                 <div class="record_snippets">
                   <div class="snippet">$snippet</div>
                 </div>
