--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit.vm
@@ -24,6 +24,7 @@
               #if($relatedRowId)
                 #set($active = true)
                 #set($fieldDisplayValue = $field.getDisplayValue($relatedRowId))##
+                Display value for $field . getDisplayValue ( $relatedRowId ) is $fieldDisplayValue
                 #set($relatedDataRow = $view.getTableDataRow($relatedTable, $relatedRowId))
                 #foreach($relatedField in $relatedDataRow.keySet())
                   #if(!$relatedField.equals($relatedField.getTableContainingField().getPrimaryKey()))
