Allow number calculations in x-ref fields

--- a/gtpb_clientside/WEB-INF/templates/gui/resources/input/referenced_report_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/input/referenced_report_data.vm
@@ -42,7 +42,7 @@
       #foreach($reportBaseField in $reportBaseFields)
     	#if(($reportBaseField.getClass().getSimpleName().equals("CalculationFieldDefn")) || (!$reportBaseField.getTableContainingField().equals($fieldTable)))
         	#set($partFieldCategory = $reportBaseField.getFieldCategory())
-        	#if($partFieldCategory == "TEXT" || $partFieldCategory == "DATE")
+        	#if($partFieldCategory == "TEXT" || $partFieldCategory == "DATE" || $partFieldCategory == "NUMBER")
         	  #set($rrd_displayValue = $rrd_reportDataRow.getValue($reportBaseField).getDisplayValue())
         	  #if($rrd_displayValue != "")
         		#set($rowContainsData = true)
