Style of related tables in slide

--- a/gtpb_clientside/resources/edit_nav/edit_nav.css
+++ b/gtpb_clientside/resources/edit_nav/edit_nav.css
@@ -154,6 +154,10 @@ body {
   color: #486F98;
 }
 
+.related .snippet {
+  color: #50add6;
+}
+
 #searchbox {
   margin-left: 2em;
   margin-top: 0.5em;
