--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit.vm
@@ -35,7 +35,7 @@
                 #end
               #end
               <div class="dependent_table related #if($active) active #end" id="dependent_table_$relatedTable.getInternalTableName()">
-                <h1><span class="count"></span>$field.getSimplifiedFieldName(): $fieldDisplayValue</h1>
+                <h1><span class="count"><img src="resources/edit_nav/up.png" alt="up"></span>$field.getSimplifiedFieldName(): $fieldDisplayValue</h1>
                 <div class="record_snippets">
                   <div class="snippet">$snippet</div>
                 </div>
