Fix NP exception: debug

--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit.vm
@@ -18,6 +18,7 @@
               #if(!$tableDataRow)
                 #set($tableDataRow = $view.getTableDataRow())
               #end
+              Related row ID for relation $field is $tableDataRow.get($field.getRelatedField())<br>
               #set($relatedRowId = $tableDataRow.get($field.getRelatedField()).getValueInteger())
               #set($snippet = "")
               #set($active = false)
