--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit.vm
@@ -19,6 +19,7 @@
             #if($field.getFieldCategory() == "RELATION")
               #set($relatedTable = $field.getRelatedTable())
               #set($relatedRowIdValue = $tableDataRow.get($field.getRelatedField()))
+              $relatedRowIdValue::
               #set($relatedRowId = $relatedRowIdValue.getValueInteger())
               #set($snippet = "")
               #set($active = false)
@@ -36,7 +37,7 @@
                 #end
               #end
               <div class="dependent_table related #if($active) active #end" id="dependent_table_$relatedTable.getInternalTableName()" rowid="$relatedRowId">
-                <h1><span class="count"><img src="resources/edit_nav/up.png" alt="up"></span>$field.getSimplifiedFieldName(): $fieldDisplayValue</h1>
+                <h1><span class="count"><img src="resources/edit_nav/up.png" alt="up" /></span>$field.getSimplifiedFieldName(): $fieldDisplayValue</h1>
                 <div class="record_snippets">
                   <div class="snippet">$snippet</div>
                 </div>
