--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit.vm
@@ -19,7 +19,7 @@
             #if($field.getFieldCategory() == "RELATION")
               #set($relatedTable = $field.getRelatedTable())
               #set($relatedRowIdValue = $tableDataRow.get($field.getRelatedField()))
-              $relatedRowIdValue::
+              $field::
               #set($relatedRowId = $relatedRowIdValue.getValueInteger())
               #set($snippet = "")
               #set($active = false)
