--- a/gtpb_clientside/resources/fullcalendar/calendar.css
+++ b/gtpb_clientside/resources/fullcalendar/calendar.css
@@ -26,6 +26,7 @@ select, textarea, input {
   width: 100%;
   -moz-column-count: 4;
   -webkit-column-count: 4;
+  -ms-column-count: 4;
   column-count: 4;
   display: none;
   background-color: #f4f4f4;
@@ -56,10 +57,6 @@ select, textarea, input {
   margin: 0;
   margin-top: 1em;
   border: 2px solid gray;
-  /* -moz-box-shadow: 0px 0px 40px gray;
-  -webkit-box-shadow: 0px 0px 40px gray;
-  box-shadow: 0px 0px 40px gray;
-  */
 }
 
 .portlet h1 {
@@ -77,6 +74,7 @@ ul li {
   margin: 0.1em;
   -moz-border-radius: 0.5em;
   -webkit-border-radius: 0.5em;
+  -ms-border-radius: 0.5em;
   border-radius: 0.5em;
   padding: 0.2em;
 }
@@ -94,14 +92,6 @@ ul li {
   padding: 1px;
 }
 
-/*
-.fc-event {
-  -moz-border-radius: 3px;
-  -webkit-border-radius: 3px;
-  border-radius: 3px;
-}	
-*/
-
 .fc-event-inner {
   overflow: hidden;
 }
@@ -114,9 +104,11 @@ ul li {
   opacity: 0.9;
   -moz-border-radius: 1em;
   -webkit-border-radius: 1em;
+  -ms-border-radius: 1em;
   border-radius: 1em;
   -moz-box-shadow: 0 0 5px #cccccc;
   -webkit-box-shadow: 0 0 5px #cccccc;
+  -ms-box-shadow: 0 0 5px #cccccc;
   box-shadow: 0 0 5px #cccccc;
   margin-left: 5px;
 }
