--- a/gtpb_clientside/resources/edit_nav/edit_nav.css
+++ b/gtpb_clientside/resources/edit_nav/edit_nav.css
@@ -69,6 +69,7 @@ body {
 
 .slide.reportDataView .related:hover {
   border-color: #50add6; /* ab light blue */
+  box-shadow: 0 1px 3px rgba(80, 173, 214, 0.3); /* RGB ab light blue */
 }
 
 .slide .title {
