--- a/gtpb_clientside/resources/edit_nav/edit_nav.css
+++ b/gtpb_clientside/resources/edit_nav/edit_nav.css
@@ -58,6 +58,7 @@ body {
 .reportDataView .block:hover {
   cursor: pointer;
   border-color: #50add6; /* ab light blue */
+  box-shadow: 0 1px 3px rgba(80, 173, 214, 0.3); /* RGB ab light blue */
 }
 
 .slide.reportDataView .related {
