Search placeholder tweak: test

--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report.vm
@@ -3,7 +3,7 @@
 #set($filterString = $sessionData.getGlobalFilterString($report))
 <div id="navrow">
   #set($dash = "/all/")
-  #set($placeholder = $report.getReportName().replaceAll(" .*",""))
+  #set($placeholder = "sdfsdfs")
   <input id="searchbox" name="searchbox" type="search" placeholder="search $placeholder" internalreportname="$report.getInternalReportName()" #if($filterString) value="$filterString" #end>
   <div id="jumpto">
   <span class="jump_label">Jump to: </span>
