Include x-ref fields in slide: CSS

--- a/gtpb_clientside/resources/edit_nav/edit_nav.css
+++ b/gtpb_clientside/resources/edit_nav/edit_nav.css
@@ -128,7 +128,7 @@ body {
 }
 
 .dependent_table.cross_reference {
-  background-color: #486f98;
+  background-color: #50add6;
 }
 
 .dependent_table.active {
