--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit.vm
@@ -52,6 +52,7 @@
           ## dependent child tables
           #set($primaryKey = $sessionTable.getPrimaryKey())
           #set($dependentTables = $view.getDirectlyDependentTables($sessionTable))
+          ## TODO: remove those which are covered by cross-referenced fields
           #foreach($dependentTable in $dependentTables)
             #if($view.loggedInUserAllowedTo("VIEW_TABLE_DATA", $dependentTable))
               #foreach($report in $dependentTable.getReports())
