Report when a table delete fails

--- a/gtpb_clientside/WEB-INF/templates/gui/administration/tables/option_sets/table_details_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/administration/tables/option_sets/table_details_data.vm
@@ -17,6 +17,9 @@
 ##
 #set($table = $sessionData.getTable())
 #set($internalTableName = $table.getInternalTableName())
+#if($view.getWhetherExceptionOccurred())
+  #parse("gui/error.vm")
+#end
 <table cellspacing=0 border=0 cellpadding=0>
   <tr valign="top">
     <td class="table_details">
