--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/dependent_slides.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/dependent_slides.vm
@@ -1,9 +1,17 @@
 #set($sessionTable = $sessionData.getTable())
 #set($sessionRowId = $sessionData.getRowId())
+#set($referencedTableReports = {})
+#foreach($field in $sessionTable.getFields())
+  #if($field.getFieldCategory() == "REFERENCED_REPORT_DATA")
+    #set($referencedReport = $field.getReferencedReport())
+    #set($success = $referencedTableReports.put($referencedReport.getParentTable(), $referencedReport))
+  #end
+#end
+#set($referencedTables = $referencedTableReports.keySet())
+## Loop through tables
 #set($dependentTables = $view.getDirectlyDependentTables($sessionTable))
-## TODO: remove those which are covered by cross-referenced fields
 #foreach($dependentTable in $dependentTables)
-#if($view.loggedInUserAllowedTo("VIEW_TABLE_DATA", $dependentTable))
+#if($view.loggedInUserAllowedTo("VIEW_TABLE_DATA", $dependentTable) && (!$referencedTables.contains($dependentTable)))
   #set($linkingReports = [])
   #set($reports = $dependentTable.getReports())
   #foreach($report in $reports)
@@ -22,6 +30,7 @@
   #if($field.getFieldCategory() == "REFERENCED_REPORT_DATA")
     #set($report = $field.getReferencedReport())
     #set($success = $crossReferencedTableReports.put($referencedReport.getParentTable(), $referencedReport))
+    #parse("gui/edit_nav/dependent_slide.vm")  
   #end
 #end
 
