--- a/gtpb_clientside/resources/edit_nav/edit_nav.css
+++ b/gtpb_clientside/resources/edit_nav/edit_nav.css
@@ -128,14 +128,14 @@ body {
 }
 
 .dependent_table.cross_reference {
-  border-bottom: 1px solid #ff8040; /* aB orange */
+  border-top: 1px solid #ff8040; /* aB orange */
   border-left:  1px solid #ff8040;
   border-right:  1px solid #ff8040; 
 }
 
-div.dependent_table.cross_reference:nth-of-type(1) {
+.dependent_table.cross_reference:last-child {
 	/* with above, forms collapsed borders */
-  border-top: 1px solid #ff8040;
+  border-bottom: 1px solid #ff8040;
 }
 
 .dependent_table.active {
